--- a/.github/workflows/deploy_to_OVH.yml
+++ b/.github/workflows/deploy_to_OVH.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Deploy to OVH via FTP
-      uses: SamKirkland/FTP-Deploy-Action@4.3.5
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ${{ secrets.OVH_FTP_SERVER }}
         username: ${{ secrets.OVH_FTP_USERNAME }}
